examples/outputs/multi_error.err
error[SIGNATURE_MISMATCH]: Invalid signature for function `too_many`
  --> examples/multi_error.casa:6:4
  |
6 | fn too_many int -> int {
  |    ^^^^^^^^
  Expected: int -> int
  Inferred: any -> any any

error[TYPE_MISMATCH]: Type mismatch in `*` (int int -> int)
  --> examples/multi_error.casa:12:15
   |
12 |     "hello" 2 *
   |               ^
  Expected: `int`
  Got: `str`
  Note: value of type `str` pushed here
  --> examples/multi_error.casa:12:5
   |
12 |     "hello" 2 *
   |     ^^^^^^^

error[INVALID_VARIABLE]: Cannot override local variable `count` of type `int` with other type `str`
  --> examples/multi_error.casa:18:14
   |
18 |     "oops" = count
   |              ^^^^^

error[STACK_MISMATCH]: Stack state changed across branch
  --> examples/multi_error.casa:27:5
   |
27 |     fi
   |     ^^
  Expected: ['any']
  Got: ['any', 'int']

Found 4 error(s).
